call method move to Baki#of